dxscale/core/security/auth/objects/AuthCredentials__mdt/AuthCredentials__mdt.object-meta.xml
<CustomObject>
    <description>Holds config to support creadential and external calls. things like basic HTTP or client grant (headless, system to system)</description>
    <label>AuthCredentials</label>
    <pluralLabel>AuthCredentials</pluralLabel>
</CustomObject>