dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/Cache_Time_To_Live__c.field-meta.xml
<CustomField>
    <fullName>Cache_Time_To_Live__c</fullName>
    <description>The Time to live of the token in the Org level Platform Cache</description>
    <inlineHelpText>in seconds and should be slightly less than the grant expiry</inlineHelpText>
    <label>Cache Time To Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>