dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID</description>
    <label>Client ID</label>
    <type>TextArea</type>
</CustomField>