dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>client_secret</description>
    <label>Client Secret</label>
    <type>TextArea</type>
</CustomField>