dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <description>the oAuth grant type</description>
    <inlineHelpText>e.g. client_credentials</inlineHelpText>
    <label>Grant Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>