dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>if this call uses a named credential - name it here</description>
    <inlineHelpText>e.g. named credential name</inlineHelpText>
    <label>Named Credential</label>
    <type>TextArea</type>
</CustomField>