dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/ProviderType__c.field-meta.xml
<CustomField>
    <fullName>ProviderType__c</fullName>
    <label>ProviderType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AzureAD</fullName>
                <default>true</default>
                <label>AzureAD</label>
            </value>
            <value>
                <fullName>Auth0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>