dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/Request_TimeOut__c.field-meta.xml
<CustomField>
    <fullName>Request_TimeOut__c</fullName>
    <description>Time in seconds before the request should fail</description>
    <inlineHelpText>in seconds </inlineHelpText>
    <label>Request Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>