dxscale/core/security/auth/objects/AuthCredentials__mdt/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <description>oAuth token URL</description>
    <inlineHelpText>e.g. https://login.microsoftonline.com/&lt;tennet&gt;/oauth2/v2.0/token</inlineHelpText>
    <label>Token URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>